start processing of pit form, restructure database

--- a/pit.html
+++ b/pit.html
@@ -22,32 +22,32 @@ hidden
 >
 <input
 type="text" value="false"
-name="entry.321248479"
+name="game-question2"
 hidden
 >
 <input
 type="text" value="false"
-name="entry.1745221229"
+name="game-question3"
 hidden
 >
 <input
 type="text" value="false"
-name="entry.189327560"
+name="game-question4"
 hidden
 >
 <input
 type="text" value="false"
-name="entry.51519363"
+name="game-question5"
 hidden
 >
 <input
 type="text" value="false"
-name="entry.1343844870"
+name="game-question6"
 hidden
 >
 <input
 type="text" value="false"
-name="entry.332731239"
+name="game-question7"
 hidden
 >
 <!--END OVERRIDES-->
@@ -56,7 +56,7 @@ hidden
 <h2>General Info:</h2>
 <fieldset>
     <label>Event Code <span style="color:red">*</span></label><br>
-<select name="entry.event">
+<select name="event">
     <option value="CADA">CADA - Sacramento Regional</option>
     <option value="CASJ" selected>CASJ - Silicon Valley Regional</option>
 </select>
@@ -93,7 +93,7 @@ required>
     <input
         placeholder="1 or 2"
         type="tel"
-        name="game-question-1"
+        name="game-question1"
         >
 </fieldset>
 <fieldset>
@@ -123,37 +123,37 @@ required>
     <input
         value="true"
         type="checkbox"
-        name="game-question-2"
+        name="game-question2"
         class="checkbig"
         >&emsp;The robot can score in the Upper Hub<br>
         <input
         value="true"
         type="checkbox"
-        name="game-question-3"
+        name="game-question3"
         class="checkbig"
         >&emsp;The robot can score in the Lower Hub<br>
         <input
         value="true"
         type="checkbox"
-        name="game-question-4"
+        name="game-question4"
         class="checkbig"
         >&emsp;The robot can climb to the Low Rung<br>
         <input
         value="true"
         type="checkbox"
-        name="game-question-5"
+        name="game-question5"
         class="checkbig"
         >&emsp;The robot can climb to the Mid Rung<br>
         <input
         value="true"
         type="checkbox"
-        name="game-question-6"
+        name="game-question6"
         class="checkbig"
         >&emsp;The robot can climb to the High Rung<br>
         <input
         value="true"
         type="checkbox"
-        name="game-question-7"
+        name="game-question7"
         class="checkbig"
         >&emsp;The robot can climb to the Traversal Rung<br>
 </fieldset>
