--- a/main.html
+++ b/main.html
@@ -1,325 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="main.css" type="text/css">
-<title>RAPID REACT Match Scouting</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css" type="text/css">
+    <title>RAPID REACT Match Scouting</title>
 </head>
+
 <body>
-<div class="cont-flex">
-<div class="cont-flex-item">
-<form 
-    action="main.php"
-    target="_self"
-    method="POST"
-    name="mainForm"
->
-<!--onclick="window.location.href = 'done.html';"-->
-<!--FORM CHECKBOX OVERRIDES TO WRITE OFF ON UNBOXES-->
-<input
-type="text" value="false"
-name="entry.321248479"
-hidden
->
-<input
-type="text" value="false"
-name="entry.012504115"
-hidden
->
-<input
-type="text" value="false"
-name="entry.1277030981"
-hidden
->
-<input
-type="text" value="false"
-name="entry.1745221229"
-hidden
->
-<input
-type="text" value="false"
-name="entry.189327560"
-hidden
->
-<input
-type="text" value="false"
-name="entry.51519363"
-hidden
->
-<input
-type="text" value="false"
-name="entry.1343844870"
-hidden
->
-<input
-type="text" value="false"
-name="entry.332731239"
-hidden
->
-<input
-type="text" value="false"
-name="entry.412041471"
-hidden
->
-<input
-type="text" value="false"
-name="entry.984983966"
-hidden
->
-<input
-type="text" value="false"
-name="entry.1220637130"
-hidden
->
-<input
-type="text" value="false"
-name="entry.1277000981"
-hidden
->
-<input
-type="text" value="false"
-name="entry.1157236568"
-hidden
->
-<input
-type="text" value="false"
-name="entry.794477414"
-hidden
->
-<input
-type="text" value="false"
-name="entry.947038770"
-hidden
->
-<input
-type="text" value="false"
-name="entry.1080933142"
-hidden
->
-<!--END OVERRIDES-->
-<h1>2022 Scouting: RAPID REACT℠</h1>
-<br>
-<h2>Pre-Match:</h2><h4 style="color: #a9a9a9;">Get this done <b>before</b> the match starts!</h4>
-<!--<fieldset>
-<label for="Form Key">Form Key&emsp;<span style="color:gray;">If this is not entered correctly, the server will reject your entire response</span><br></label>
-<input
-placeholder="xxxxxxxxxxxx"
-type="text"
-name="entry.key"
-id="psw1"
-required>
-</fieldset>-->
-<fieldset>
-    <label>Event Code <span style="color:red">*</span></label><br>
-<select name="entry.event">
-    <option value="CADA">CADA - Sacramento Regional</option>
-    <option value="CASJ" selected>CASJ - Silicon Valley Regional</option>
-</select>
-</fieldset>
-<fieldset>
-<label>Your Name <span style="color:red">*</span><br></label>
-<input
-placeholder="Amon Gus"
-type="text"
-name="entry.398176575"
-required>
-</fieldset>
+    <form action="" target="_self" method="POST" name="mainForm">
+        <input type="text" value="false" name="game1" hidden>
+        <input type="text" value="false" name="game2" hidden>
+        <input type="text" value="false" name="game3" hidden>
+        <input type="text" value="false" name="game4" hidden>
+        <input type="text" value="false" name="game5" hidden>
+        <input type="text" value="false" name="game12" hidden>
+        <h1>2023 Scouting: Charged Up</h1><br>
+        <h2>Pre-Match:</h2>
+        <h4 style="color: #a9a9a9;">Get this done <b>before</b> the match starts!</h4>
+        <fieldset>
+            <label>Event Code <span style="color:red">*</span></label><br>
+            <select name="event">
+                <option value="CADA">CADA - Sacramento Regional</option>
+                <option value="CASJ" selected>CASJ - Silicon Valley Regional</option>
+            </select>
+        </fieldset>
 
-<fieldset>
-<label>Number of the Team you are Scouting <span style="color:red">*</span><br></label>
-<input
-    placeholder="766"
-    type="tel"
-    name="entry.1638702746"
-    required>
-</fieldset>
+        <fieldset>
+            <label>Your Name <span style="color:red">*</span><br></label>
+            <input placeholder="Amon Gus" type="text" name="name" required>
+        </fieldset>
 
-<fieldset>
-<label>Name of the Team you are Scouting<br></label>
-<input
-    placeholder="Bears"
-    type="text"
-    name="entry.215295328"
-    >
-</fieldset>
-<fieldset>
-    <label>Match Number <span style="color:red">*</span><br></label>
-    <input
-        placeholder="01"
-        type="tel"
-        name="entry.508602665"
-        required
-        >
-    <select name="entry.matchlvl">
-        <option value="qual">Qual</option>
-        <option value="practice">Practice</option>
-        <option value="quarterfinal">Quarterfinal</option>
-        <option value="semifinal">Semifinal</option>
-    </select>
-</fieldset><br>
-<h2>Match Scouting</h2><h4 style="color: #a9a9a9;">Do this section for the duration of the match, fill out the rest at the end.</h4>
-<fieldset>
-    <label style="font-size: 8vw">Auton<br></label>
-    <br>
-    <input
-        value="true"
-        type="checkbox"
-        name="entry.1277030981"
-        class="checkbig"
-        ><span style="font-size: 5vw">&emsp;During Auton, the robot taxied<br></span><br>
-    <input
-        value="true"
-        type="checkbox"
-        name="entry.984983966"
-        class="checkbig"
-        ><span style="font-size: 5vw">&emsp;During Auton, the robot successfully shot cargo into the hubs<br></span><br>
-    <input
-        value="true"
-        type="checkbox"
-        name="entry.1220637130"
-        class="checkbig"
-        ><span style="font-size: 5vw">&emsp;During Auton, the robot retrieved cargo from the field<br></span><br>
-    <input
-        value="true"
-        type="checkbox"
-        name="entry.412041471"
-        class="checkbig"
-        ><span style="font-size: 5vw">&emsp;During Auton, the robot failed to score points, but made an attempt<br></span><br>
-        <input
-        value="true"
-        type="checkbox"
-        name="entry.1277000981"
-        class="checkbig"
-        ><span style="font-size: 5vw">&emsp;During Auton, the robot failed to score points</span><br>
-</fieldset>
-<fieldset>
-<label style="font-size: 8vw;">For Teleop ONLY:</label><br><br>
-Made Upper Hub shots: <input
-id="madeupper"
-type="number"
-value="0"
-name="madeupper"
-class="incnum"
-><br>
-<button onclick="incValueMadeUpper()" type="button"  style="width: 100%; height: 5rem; margin-top: 0.35rem; font-size: xx-large;">+</button><br><br>
-Missed Upper Hub shots: <input
-id="missedupper"
-type="number"
-value="0"
-name="missedupper"
-class="incnum"
-><br>
-<button onclick="incValueMissedUpper()" type="button"  style="width: 100%; height: 5rem; margin-top: 0.35rem; font-size: xx-large;">+</button><br><br>
-Made Lower Hub shots: <input
-id="madelower"
-type="number"
-value="0"
-name="madelower"
-class="incnum"
-><br>
-<button onclick="incValueMadeLower()" type="button"  style="width: 100%; height: 5rem; margin-top: 0.35rem; font-size: xx-large;">+</button><br><br>
-Missed Lower Hub shots: <input
-id="missedlower"
-type="number"
-value="0"
-name="missedlower"
-class="incnum"
-><br>
-<button onclick="incValueMissedLower()" type="button" style="width: 100%; height: 5rem; margin-top: 0.35rem; font-size: xx-large;">+</button><br><br>
-Bars climbed:<br>
-<select name="barsdone"><option value="none">No Bars</option><option value="low">Low Bar</option><option value="mid">Mid Bar</option><option value="high">High Bar</option><option value="trav">Traversal Bar</option></select><br>
-Bars attempted:<br>
-<select name="barsatt"><option value="none">No Bars</option><option value="low">Low Bar</option><option value="mid">Mid Bar</option><option value="high">High Bar</option><option value="trav">Traversal Bar</option></select>
-<br>
-</fieldset>
+        <fieldset>
+            <label>Number of the Team you are Scouting <span style="color:red">*</span><br></label>
+            <input placeholder="766" type="tel" name="team" required>
+        </fieldset>
 
-    <input
-        placeholder="0"
-        type="number"
-        name="entry.1019141500"
-        hidden
-        >
+        <fieldset>
+            <label>Match Number <span style="color:red">*</span><br></label>
+            <input placeholder="01" type="tel" name="match" required>
+            <select name="level">
+                <option value="practice">Practice</option>
+                <option value="qualification" selected>Qual</option>
+                <option value="quarterfinal">Quarterfinal</option>
+                <option value="semifinal">Semifinal</option>
+            </select>
+        </fieldset><br>
+        <h2>Match Scouting</h2>
+        <h4 style="color: #a9a9a9;">Do this section for the duration of the match, fill out the rest at the end.</h4>
+        <fieldset>
+            <label>Auton<br></label>
+            <br>
+            <input value="true" type="checkbox" name="game1" class="checkbig"><span>&emsp;During Auton, the robot taxied<br></span><br>
+            <input value="true" type="checkbox" name="game2" class="checkbig"><span>&emsp;During Auton, the robot successfully shot cargo into the hubs<br></span><br>
+            <input value="true" type="checkbox" name="game3" class="checkbig"><span>&emsp;During Auton, the robot retrieved cargo from the field<br></span><br>
+            <input value="true" type="checkbox" name="game4" class="checkbig"><span>&emsp;During Auton, the robot failed to score points, but made an attempt<br></span><br>
+            <input value="true" type="checkbox" name="game5" class="checkbig"><span>&emsp;During Auton, the robot failed to score points</span><br>
+        </fieldset>
+        <fieldset>
+            <label>For Teleop ONLY:</label>
+            <br><br> Made Upper Hub shots: <input id="game6" type="number" value="0" name="madeupper" class="incnum"><br><button onclick="incValueMadeUpper()" type="button" style="width: 100%; height: 5rem; margin-top: 0.35rem;">+</button>
+            <br><br> Missed Upper Hub shots: <input id="game7" type="number" value="0" name="missedupper" class="incnum"><br><button onclick="incValueMissedUpper()" type="button" style="width: 100%; height: 5rem; margin-top: 0.35rem;">+</button>
+            <br><br> Made Lower Hub shots: <input id="game8" type="number" value="0" name="madelower" class="incnum"><br><button onclick="incValueMadeLower()" type="button" style="width: 100%; height: 5rem; margin-top: 0.35rem;">+</button>
+            <br><br> Missed Lower Hub shots: <input id="game9" type="number" value="0" name="missedlower" class="incnum"><br><button onclick="incValueMissedLower()" type="button" style="width: 100%; height: 5rem; margin-top: 0.35rem;">+</button>
+            <br><br> Bars climbed:<br><select name="game10"><option value="none">No Bars</option><option value="low">Low Bar</option><option value="mid">Mid Bar</option><option value="high">High Bar</option><option value="trav">Traversal Bar</option></select>
+            <br> Bars attempted:<br><select name="game11"><option value="none">No Bars</option><option value="low">Low Bar</option><option value="mid">Mid Bar</option><option value="high">High Bar</option><option value="trav">Traversal Bar</option></select>
+            <br>
+        </fieldset>
 
-<fieldset>
-    <input
-    value="true"
-    type="checkbox"
-    name="entry.1080933142"
-    class="checkbig"
-    ><span style="font-size: 5vw">&emsp;The Human Player interacts with the robot</span><br>
-</fieldset>
-<br>
-<h2>Post Game</h2><h4 style="color: gray;">Fill this out after the game. Watch the game closely, and take note of important events.</h4>
-<fieldset>
-    <label>Does the team seem consistent in auton?</label><br>
-    <select
-    name="entry.1152778382"
-    >
+        <fieldset>
+            <input value="true" type="checkbox" name="game12" class="checkbig"><span>&emsp;The Human Player interacts with the robot</span><br>
+        </fieldset>
+        
+        <!--extra fields to use-->
+        <input placeholder="0" type="number" name="game13" hidden>
+        <input placeholder="0" type="number" name="game14" hidden>
+        <input placeholder="0" type="number" name="game15" hidden>
+        <input placeholder="0" type="number" name="game16" hidden>
+        <input placeholder="0" type="number" name="game17" hidden>
+        <input placeholder="0" type="number" name="game18" hidden>
+        <input placeholder="0" type="number" name="game19" hidden>
+        <input placeholder="0" type="number" name="game20" hidden>
+        <input placeholder="0" type="number" name="game21" hidden>
+        <input placeholder="0" type="number" name="game22" hidden>
+        <input placeholder="0" type="number" name="game23" hidden>
+        <input placeholder="0" type="number" name="game24" hidden>
+        <input placeholder="0" type="number" name="game25" hidden>
+        
+        <br>
+        <h2>Post Game</h2>
+        <h4 style="color: gray;">Fill this out after the game. Watch the game closely, and take note of important events.</h4>
+        <fieldset>
+            <label>Does the team seem consistent in auton?</label><br>
+            <select name="entry.1152778382">
     <option value="Their performance seems promising and consistent">Consistent</option>
     <option value="Their performance seems somewhat consistent">Somewhat consistent</option>
     <option value="Their performance may change across different trials">Somewhat inconsistent</option>
     <option value="Their performance will probably be different next time">Inconsistent</option>
 </select>
-</fieldset>
-<fieldset>
-    <label>Any other thoughts about the teleop phase? Actions it took during so?<br><br></label>
-    <textarea rows="2" cols="35" name="entry.711121407" placeholder="No"></textarea>
-</fieldset>
-<fieldset>
-    <label>Did the robot play defense? If so, what did they do?<br><br></label>
-    <textarea rows="2" cols="35" name="entry.309796794" placeholder="No"></textarea>
-</fieldset>
-<fieldset>
-    <label>Any thoughts about the driving?<br><br></label>
-    <textarea rows="2" cols="35" name="entry.177753238" placeholder="No"></textarea>
-</fieldset>
-<fieldset>
-    <label>Overall assessment? Alliance partner?)<br><br></label>
-    <textarea rows="4" cols="35" name="entry.1013139442" placeholder="Team is pretty mid..."></textarea>
-</fieldset>
-<br>
-<p style="text-align:center">
-<input type="submit" value="Submit Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;"><br><br>
-<input type="reset" value="Reset Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;"><br><br><br>
-<a href="index.html" style="color: white; background-color: #E90202; border-radius: 1rem; border-style: solid; border-color: #E90202; border-width: 1rem;">Back</a>
-</p>
-</form>
-<br><br>
-    <script>
-        //missed lower
-        function incValueMissedLower()
-        {
-            var value = parseInt(document.getElementById('missedlower').value, 10);
-            value = isNaN(value) ? 0 : value;
-            value++;
-            document.getElementById('missedlower').value = value;
-        }
-        //made lower
-        function incValueMadeLower()
-        {
-            var value = parseInt(document.getElementById('madelower').value, 10);
-            value = isNaN(value) ? 0 : value;
-            value++;
-            document.getElementById('madelower').value = value;
-        }
-        //missed upper
-        function incValueMissedUpper()
-        {
-            var value = parseInt(document.getElementById('missedupper').value, 10);
-            value = isNaN(value) ? 0 : value;
-            value++;
-            document.getElementById('missedupper').value = value;
-        }
-        //made upper
-        function incValueMadeUpper()
-        {
-            var value = parseInt(document.getElementById('madeupper').value, 10);
-            value = isNaN(value) ? 0 : value;
-            value++;
-            document.getElementById('madeupper').value = value;
-        }</script>
-    </div>
-    </div>
-    </body>
+        </fieldset>
+        <fieldset>
+            <label>Any other thoughts about the teleop phase? Actions it took during so?<br><br></label>
+            <textarea rows="2" cols="35" name="entry.711121407" placeholder="No"></textarea>
+        </fieldset>
+        <fieldset>
+            <label>Did the robot play defense? If so, what did they do?<br><br></label>
+            <textarea rows="2" cols="35" name="entry.309796794" placeholder="No"></textarea>
+        </fieldset>
+        <fieldset>
+            <label>Any thoughts about the driving?<br><br></label>
+            <textarea rows="2" cols="35" name="entry.177753238" placeholder="No"></textarea>
+        </fieldset>
+        <fieldset>
+            <label>Overall assessment? Alliance partner?)<br><br></label>
+            <textarea rows="4" cols="35" name="entry.1013139442" placeholder="Team is pretty mid..."></textarea>
+        </fieldset>
+        <br>
+        <p style="text-align:center">
+            <input type="submit" value="Submit Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem; margin-top: 1rem;">
+            <input type="reset" value="Reset Form" style="color: white; background-color: #E90202; border-radius: 1rem; border-style: solid; border-color: #E90202; border-width: 1rem; margin-top: 1rem;"><br><br>
+            <a href="index.html" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem; text-decoration: none; margin-top: 1rem;">Back</a>
+        </p>
+    </form>
+    <br><br>
+    <script src="form.js"></script>
+</body>
 </html>
