--- a/pit.html
+++ b/pit.html
@@ -1,212 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="main.css" type="text/css">
-<title>RAPID REACT Pit Scouting</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css" type="text/css">
+    <title>Pit Scouting</title>
 </head>
+
 <body>
-<div class="container">
-<form 
-    action="http://localhost:766"
-    target="_self"
-    method="POST"
-    name="pitForm"
-    enctype='multipart/form-data'
->
-<!--overrides-->
-<input
-type="text" value="pitform"
-name="formType"
-hidden
->
-<input
-type="text" value="false"
-name="game-question2"
-hidden
->
-<input
-type="text" value="false"
-name="game-question3"
-hidden
->
-<input
-type="text" value="false"
-name="game-question4"
-hidden
->
-<input
-type="text" value="false"
-name="game-question5"
-hidden
->
-<input
-type="text" value="false"
-name="game-question6"
-hidden
->
-<input
-type="text" value="false"
-name="game-question7"
-hidden
->
-<!--END OVERRIDES-->
-<h1>2022 Scouting: RAPID REACT℠</h1>
-<br>
-<h2>General Info:</h2>
-<fieldset>
-    <label>Event Code <span style="color:red">*</span></label><br>
-<select name="event">
-    <option value="CADA">CADA - Sacramento Regional</option>
-    <option value="CASJ" selected>CASJ - Silicon Valley Regional</option>
-</select>
-</fieldset>
-<fieldset>
-<label>Your Name <span style="color:red">*</span><br></label>
-<input
-placeholder="Amon Gus"
-type="text"
-name="name"
-required>
-</fieldset>
+    <div class="cont-flex">
+        <div class="cont-flex-item">
+            <form action="" target="_self" method="POST" enctype='multipart/form-data'>
+                <!--overrides-->
+                <input type="text" value="false" name="entry.321248479" hidden>
+                <input type="text" value="false" name="entry.1745221229" hidden>
+                <input type="text" value="false" name="entry.189327560" hidden>
+                <input type="text" value="false" name="entry.51519363" hidden>
+                <input type="text" value="false" name="entry.1343844870" hidden>
+                <input type="text" value="false" name="entry.332731239" hidden>
+                <!--END OVERRIDES-->
+                <h1>2023 Scouting: Charged Up</h1>
+                <br>
+                <h2>General Info:</h2>
+                <fieldset>
+                    <label>Event Code <span style="color:red">*</span></label><br>
+                    <select name="event">
+                        <option value="CADA">CADA - Sacramento Regional</option>
+                        <option value="CASJ" selected>CASJ - Silicon Valley Regional</option>
+                    </select>
+                </fieldset>
+                <fieldset>
+                    <label>Your Name <span style="color:red">*</span><br></label>
+                    <input placeholder="Amon Gus" type="text" name="name" required>
+                </fieldset>
 
-<fieldset>
-<label>Number of the Team you are Scouting <span style="color:red">*</span><br></label>
-<input
-    placeholder="766"
-    type="tel"
-    name="teamnum"
-    required>
-</fieldset>
+                <fieldset>
+                    <label>Number of the Team you are Scouting <span style="color:red">*</span><br></label>
+                    <input placeholder="766" type="tel" name="team" required>
+                </fieldset>
 
-<fieldset>
-<label>Name of the Team you are Scouting<br></label>
-<input
-    placeholder="Bears"
-    type="text"
-    name="teamnam"
-    >
-</fieldset>
-<h2>Pit Scouting</h2><h4 style="color: #a9a9a9;">&emsp;If you don't know the answer, just ask the team themselves</h4>
-<fieldset>
-    <label>How much cargo can the robot hold at a time?<br></label>
-    <input
-        placeholder="1 or 2"
-        type="tel"
-        name="game-question1"
-        >
-</fieldset>
-<fieldset>
-    <label>Drive Type<br></label>
-    <select name="drivetype">
-        <option value="westcoast">Westcoast (Like Ours)</option>
-        <option value="swerve">Swerve (Each wheel turns)</option>
-        <option value="other">Other (Explain in overall)</option>
-    </select>
-</fieldset>
-<fieldset>
-    <label>Experience<br></label>
-    <input
-    placeholder="10 wks"
-    type="text"
-    name="driveteam"
-    > Weeks of drive team work<br>
-    <input
-    placeholder="0 or 1"
-    type="text"
-    name="attended"
-    > Number of attended onseason events
-</fieldset>
-<fieldset>
-    <label>Robot Capabilities<br></label>
-    <br>
-    <input
-        value="true"
-        type="checkbox"
-        name="game-question2"
-        class="checkbig"
-        >&emsp;The robot can score in the Upper Hub<br>
-        <input
-        value="true"
-        type="checkbox"
-        name="game-question3"
-        class="checkbig"
-        >&emsp;The robot can score in the Lower Hub<br>
-        <input
-        value="true"
-        type="checkbox"
-        name="game-question4"
-        class="checkbig"
-        >&emsp;The robot can climb to the Low Rung<br>
-        <input
-        value="true"
-        type="checkbox"
-        name="game-question5"
-        class="checkbig"
-        >&emsp;The robot can climb to the Mid Rung<br>
-        <input
-        value="true"
-        type="checkbox"
-        name="game-question6"
-        class="checkbig"
-        >&emsp;The robot can climb to the High Rung<br>
-        <input
-        value="true"
-        type="checkbox"
-        name="game-question7"
-        class="checkbig"
-        >&emsp;The robot can climb to the Traversal Rung<br>
-</fieldset>
-<fieldset>
-    <label><strong>Overconfidence</strong></label><br>
-    <table style="text-align:center;">
-        <tr><td rowspan="3">Humble&emsp;</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td rowspan="3">&emsp;Cocky</td></tr>
-    <tr><td></td><td><input type="radio" name="overconf" value="1" class="checkbig"></td>
-    <td><input type="radio" name="overconf" value="2" class="checkbig"></td>
-    <td><input type="radio" name="overconf" value="3" class="checkbig"></td>
-    <td><input type="radio" name="overconf" value="4" class="checkbig" checked></td>
-    <td><input type="radio" name="overconf" value="5" class="checkbig"></td>
-    <td><input type="radio" name="overconf" value="6" class="checkbig"></td>
-    <td><input type="radio" name="overconf" value="7" class="checkbig"></td><td></td></tr>
-    <tr><td></td><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td></td></tr>
-    </table></fieldset><fieldset>
-    <label><strong>Build Quality</strong></label><br>
-    <table style="text-align:center;">
-        <tr><td rowspan="3">Hot Glue&emsp;</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td rowspan="3">&emsp;Apple, Inc</td></tr>
-    <tr><td></td><td><input type="radio" name="bqual" value="1" class="checkbig"></td>
-    <td><input type="radio" name="bqual" value="2" class="checkbig"></td>
-    <td><input type="radio" name="bqual" value="3" class="checkbig"></td>
-    <td><input type="radio" name="bqual" value="4" class="checkbig" checked></td>
-    <td><input type="radio" name="bqual" value="5" class="checkbig"></td>
-    <td><input type="radio" name="bqual" value="6" class="checkbig"></td>
-    <td><input type="radio" name="bqual" value="7" class="checkbig"></td><td></td></tr>
-    <tr><td></td><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td></td></tr>
-    </table>
-</fieldset>
-<fieldset>
-    <label>Overall assessment? (Would we want to be in an alliance with them?)<br></label>
-    <textarea rows="4" cols="50" name="entry.1013139442" placeholder="Team is pretty mid..." style="font-size: x-large !important;"></textarea>
-</fieldset>
-<fieldset>
-    <label>Upload images <span style="color:orange">*</span></label><br>
-    <table>
-    <tr><td><label style="color:white">Bot Front</label></td><td><span>&emsp; &emsp;</span></td><td><input type="file" name="pitimg1"/></td></tr>
-    <tr><td><label style="color:white">Bot Back</label></td><td><span>&emsp; &emsp;</span></td><td><input type="file" name="pitimg2"/></td></tr>
-    <tr><td><label style="color:white">Bot Side</label></td><td><span>&emsp; &emsp;</span></td><td><input type="file" name="pitimg3"/></td></tr>
-    <tr><td><label style="color:white">Bot Other Side</label></td><td>&emsp; &emsp;</td><td><input type="file" name="pitimg4"/></td></tr>
-    <tr><td><label style="color:white">Top Down</label></td><td><span>&emsp; &emsp;</span></td><td><input type="file" name="pitimg5"/></td></tr>
-    </table>
-</fieldset>
-<br>
-<p style="text-align:center">
-<input type="submit" value="Submit Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;">   
-<input type="reset" value="Reset Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;">  
-<a href="index.html" style="color: white; background-color: #E90202; border-radius: 1rem; border-style: solid; border-color: #E90202; border-width: 1rem;">Back</a>
-</p>
-<p style="font-size:x-small">This site is built for mobile devices. Version 2.0.0 - ©2022 Jayen Agrawal. FIRST®, FIRST® Robotics Competition, and RAPID REACT are registered trademarks of FIRST®</p>
-</form>
-<br><br>
-    <script src="form.js"></script>
+                <h2>Pit Scouting</h2>
+                <h4 style="color: #a9a9a9;">&emsp;If you don't know the answer, just ask the team themselves</h4>
+                <fieldset>
+                    <label>How much cargo can the robot hold at a time?<br></label>
+                    <input placeholder="1 or 2" type="tel" name="game1">
+                </fieldset>
+
+                <fieldset>
+                    <label>Drive Type<br></label>
+                    <select name="drivetype">
+                        <option value="westcoast">Westcoast (Like Ours)</option>
+                        <option value="swerve">Swerve (Like Ours)</option>
+                        <option value="other">Other (Explain in overall)</option>
+                    </select>
+                </fieldset>
+                <fieldset>
+                    <label>Experience<br></label>
+                    <input placeholder="-5" type="text" name="driveTeam"> Weeks of drive team work<br>
+                    <input placeholder="1" type="text" name="attended"> Number of attended events
+                </fieldset>
+                <fieldset>
+                    <label>Robot Capabilities<br></label>
+                    <br>
+                    <input value="true" type="checkbox" name="game2" class="checkbig">&emsp;The robot can score in the Upper Hub<br><br>
+                    <input value="true" type="checkbox" name="game3" class="checkbig">&emsp;The robot can score in the Lower Hub<br><br>
+                    <input value="true" type="checkbox" name="game4" class="checkbig">&emsp;The robot can climb to the Low Rung<br><br>
+                    <input value="true" type="checkbox" name="game5" class="checkbig">&emsp;The robot can climb to the Mid Rung<br><br>
+                    <input value="true" type="checkbox" name="game6" class="checkbig">&emsp;The robot can climb to the High Rung<br><br>
+                    <input value="true" type="checkbox" name="game7" class="checkbig">&emsp;The robot can climb to the Traversal Rung<br><br>
+                </fieldset>
+                <fieldset>
+                    <label><strong>Confidence</strong></label><br>
+                    <table style="text-align:center;">
+                        <tr>
+                            <td rowspan="3"></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td rowspan="3"></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td><input type="radio" name="overconf" value="1" class="checkbig"></td>
+                            <td><input type="radio" name="overconf" value="2" class="checkbig"></td>
+                            <td><input type="radio" name="overconf" value="3" class="checkbig"></td>
+                            <td><input type="radio" name="overconf" value="4" class="checkbig" checked></td>
+                            <td><input type="radio" name="overconf" value="5" class="checkbig"></td>
+                            <td><input type="radio" name="overconf" value="6" class="checkbig"></td>
+                            <td><input type="radio" name="overconf" value="7" class="checkbig"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>1</td>
+                            <td>2</td>
+                            <td>3</td>
+                            <td>4</td>
+                            <td>5</td>
+                            <td>6</td>
+                            <td>7</td>
+                            <td></td>
+                        </tr>
+                    </table>
+                </fieldset>
+                <fieldset>
+                    <label><strong>Build Quality</strong></label><br>
+                    <table style="text-align:center;">
+                        <tr>
+                            <td rowspan="3"></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td rowspan="3"></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td><input type="radio" name="bqual" value="1" class="checkbig"></td>
+                            <td><input type="radio" name="bqual" value="2" class="checkbig"></td>
+                            <td><input type="radio" name="bqual" value="3" class="checkbig"></td>
+                            <td><input type="radio" name="bqual" value="4" class="checkbig" checked></td>
+                            <td><input type="radio" name="bqual" value="5" class="checkbig"></td>
+                            <td><input type="radio" name="bqual" value="6" class="checkbig"></td>
+                            <td><input type="radio" name="bqual" value="7" class="checkbig"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>1</td>
+                            <td>2</td>
+                            <td>3</td>
+                            <td>4</td>
+                            <td>5</td>
+                            <td>6</td>
+                            <td>7</td>
+                            <td></td>
+                        </tr>
+                    </table>
+                </fieldset>
+                <fieldset>
+                    <label>Overall assessment<br></label>
+                    <textarea rows="4" cols="38" name="overall" placeholder="Team is pretty mid..."></textarea>
+                </fieldset>
+                <fieldset>
+                    <label>Upload images <span style="color:orange">*</span></label><br><br>
+                    <label style="color:white">Bot Front</label><span>&emsp; &emsp;</span><input type="file" name="image1"><br><br>
+                    <label style="color:white">Bot Back</label><span>&emsp; &emsp;</span><input type="file" name="image2"><br><br>
+                    <label style="color:white">Bot Side</label><span>&emsp; &emsp;</span><input type="file" name="image3"><br><br>
+                    <label style="color:white">Bot Other Side</label>&emsp; &emsp;<input type="file" name="image4"><br><br>
+                    <label style="color:white">Top Down</label><span>&emsp; &emsp;</span><input type="file" name="image5">
+                </fieldset>
+                <br>
+                <p style="text-align:center">
+                    <input type="submit" value="Submit Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;"><br><br>
+                    <input type="reset" value="Reset Form" style="color: white; background-color: #E90202; border-radius: 1rem; border-style: solid; border-color: #E90202; border-width: 1rem;"><br><br>
+                    <a href="index.html" style="color: white; background-color: #E90202; border-radius: 1rem; border-style: solid; border-color: #E90202; border-width: 1rem;">Back</a><br><br>
+                </p>
+            </form>
+            <br><br>
+            <script src="form.js"></script>
+        </div>
     </div>
-    </body>
+</body>
+
 </html>
