do we *really* need images

--- a/pit.html
+++ b/pit.html
@@ -11,7 +11,7 @@
 <body>
     <div class="cont-flex">
         <div class="cont-flex-item">
-            <form action="" target="_self" method="POST" enctype='multipart/form-data'>
+            <form action="" target="_self" method="POST">
                 <!--overrides-->
                 <input type="text" value="false" name="entry.321248479" hidden>
                 <input type="text" value="false" name="entry.1745221229" hidden>
@@ -153,14 +153,6 @@
                 <fieldset>
                     <label>Overall assessment<br></label>
                     <textarea rows="4" cols="38" name="overall" placeholder="Team is pretty mid..."></textarea>
-                </fieldset>
-                <fieldset>
-                    <label>Upload images <span style="color:orange">*</span></label><br><br>
-                    <label style="color:white">Bot Front</label><span>&emsp; &emsp;</span><input type="file" name="image1"><br><br>
-                    <label style="color:white">Bot Back</label><span>&emsp; &emsp;</span><input type="file" name="image2"><br><br>
-                    <label style="color:white">Bot Side</label><span>&emsp; &emsp;</span><input type="file" name="image3"><br><br>
-                    <label style="color:white">Bot Other Side</label>&emsp; &emsp;<input type="file" name="image4"><br><br>
-                    <label style="color:white">Top Down</label><span>&emsp; &emsp;</span><input type="file" name="image5">
                 </fieldset>
                 <br>
                 <p style="text-align:center">
