update db to work with forms
specifies general names so it is easier to update

--- a/main.html
+++ b/main.html
@@ -74,19 +74,19 @@
         </fieldset>
         
         <!--extra fields to use-->
-        <input placeholder="0" type="number" name="game13" hidden>
-        <input placeholder="0" type="number" name="game14" hidden>
-        <input placeholder="0" type="number" name="game15" hidden>
-        <input placeholder="0" type="number" name="game16" hidden>
-        <input placeholder="0" type="number" name="game17" hidden>
-        <input placeholder="0" type="number" name="game18" hidden>
-        <input placeholder="0" type="number" name="game19" hidden>
-        <input placeholder="0" type="number" name="game20" hidden>
-        <input placeholder="0" type="number" name="game21" hidden>
-        <input placeholder="0" type="number" name="game22" hidden>
-        <input placeholder="0" type="number" name="game23" hidden>
-        <input placeholder="0" type="number" name="game24" hidden>
-        <input placeholder="0" type="number" name="game25" hidden>
+        <input value="0" type="number" name="game13" hidden>
+        <input value="0" type="number" name="game14" hidden>
+        <input value="0" type="number" name="game15" hidden>
+        <input value="0" type="number" name="game16" hidden>
+        <input value="0" type="number" name="game17" hidden>
+        <input value="0" type="number" name="game18" hidden>
+        <input value="0" type="number" name="game19" hidden>
+        <input value="0" type="number" name="game20" hidden>
+        <input value="0" type="number" name="game21" hidden>
+        <input value="0" type="number" name="game22" hidden>
+        <input value="0" type="number" name="game23" hidden>
+        <input value="0" type="number" name="game24" hidden>
+        <input value="0" type="number" name="game25" hidden>
         
         <br>
         <h2>Post Game</h2>
@@ -102,19 +102,19 @@
         </fieldset>
         <fieldset>
             <label>Any other thoughts about the teleop phase? Actions it took during so?<br><br></label>
-            <textarea rows="2" cols="35" name="entry.711121407" placeholder="No"></textarea>
+            <textarea rows="2" cols="35" name="teleop" placeholder="No"></textarea>
         </fieldset>
         <fieldset>
             <label>Did the robot play defense? If so, what did they do?<br><br></label>
-            <textarea rows="2" cols="35" name="entry.309796794" placeholder="No"></textarea>
+            <textarea rows="2" cols="35" name="defend" placeholder="No"></textarea>
         </fieldset>
         <fieldset>
             <label>Any thoughts about the driving?<br><br></label>
-            <textarea rows="2" cols="35" name="entry.177753238" placeholder="No"></textarea>
+            <textarea rows="2" cols="35" name="driving" placeholder="No"></textarea>
         </fieldset>
         <fieldset>
             <label>Overall assessment? Alliance partner?)<br><br></label>
-            <textarea rows="4" cols="35" name="entry.1013139442" placeholder="Team is pretty mid..."></textarea>
+            <textarea rows="4" cols="35" name="overall" placeholder="Team is pretty mid..."></textarea>
         </fieldset>
         <br>
         <p style="text-align:center">
