--- a/pit.html
+++ b/pit.html
@@ -13,12 +13,12 @@
         <div class="cont-flex-item">
             <form action="" target="_self" method="POST">
                 <!--overrides-->
-                <input type="text" value="false" name="entry.321248479" hidden>
-                <input type="text" value="false" name="entry.1745221229" hidden>
-                <input type="text" value="false" name="entry.189327560" hidden>
-                <input type="text" value="false" name="entry.51519363" hidden>
-                <input type="text" value="false" name="entry.1343844870" hidden>
-                <input type="text" value="false" name="entry.332731239" hidden>
+                <input type="text" value="false" name="game2" hidden>
+                <input type="text" value="false" name="game3" hidden>
+                <input type="text" value="false" name="game4" hidden>
+                <input type="text" value="false" name="game5" hidden>
+                <input type="text" value="false" name="game6" hidden>
+                <input type="text" value="false" name="game7" hidden>
                 <!--END OVERRIDES-->
                 <h1>2023 Scouting: Charged Up</h1>
                 <br>
@@ -70,6 +70,21 @@
                     <input value="true" type="checkbox" name="game6" class="checkbig">&emsp;The robot can climb to the High Rung<br><br>
                     <input value="true" type="checkbox" name="game7" class="checkbig">&emsp;The robot can climb to the Traversal Rung<br><br>
                 </fieldset>
+
+                <input value="0" type="number" name="game8" hidden>
+                <input value="0" type="number" name="game9" hidden>
+                <input value="0" type="number" name="game10" hidden>
+                <input value="0" type="number" name="game11" hidden>
+                <input value="0" type="number" name="game12" hidden>
+                <input value="0" type="number" name="game13" hidden>
+                <input value="0" type="number" name="game14" hidden>
+                <input value="0" type="number" name="game15" hidden>
+                <input value="0" type="number" name="game16" hidden>
+                <input value="0" type="number" name="game17" hidden>
+                <input value="0" type="number" name="game18" hidden>
+                <input value="0" type="number" name="game19" hidden>
+                <input value="0" type="number" name="game20" hidden>
+                
                 <fieldset>
                     <label><strong>Confidence</strong></label><br>
                     <table style="text-align:center;">
@@ -88,13 +103,13 @@
                         </tr>
                         <tr>
                             <td></td>
-                            <td><input type="radio" name="overconf" value="1" class="checkbig"></td>
-                            <td><input type="radio" name="overconf" value="2" class="checkbig"></td>
-                            <td><input type="radio" name="overconf" value="3" class="checkbig"></td>
-                            <td><input type="radio" name="overconf" value="4" class="checkbig" checked></td>
-                            <td><input type="radio" name="overconf" value="5" class="checkbig"></td>
-                            <td><input type="radio" name="overconf" value="6" class="checkbig"></td>
-                            <td><input type="radio" name="overconf" value="7" class="checkbig"></td>
+                            <td><input type="radio" name="confidence" value="1" class="checkbig"></td>
+                            <td><input type="radio" name="confidence" value="2" class="checkbig"></td>
+                            <td><input type="radio" name="confidence" value="3" class="checkbig"></td>
+                            <td><input type="radio" name="confidence" value="4" class="checkbig" checked></td>
+                            <td><input type="radio" name="confidence" value="5" class="checkbig"></td>
+                            <td><input type="radio" name="confidence" value="6" class="checkbig"></td>
+                            <td><input type="radio" name="confidence" value="7" class="checkbig"></td>
                             <td></td>
                         </tr>
                         <tr>
@@ -155,6 +170,7 @@
                     <textarea rows="4" cols="38" name="overall" placeholder="Team is pretty mid..."></textarea>
                 </fieldset>
                 <br>
+
                 <p style="text-align:center">
                     <input type="submit" value="Submit Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;"><br><br>
                     <input type="reset" value="Reset Form" style="color: white; background-color: #E90202; border-radius: 1rem; border-style: solid; border-color: #E90202; border-width: 1rem;"><br><br>
