ready the html documents

--- a/main.html
+++ b/main.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css" type="text/css">
-    <title>RAPID REACT Match Scouting</title>
+    <title>Match Scouting</title>
 </head>
 
 <body>
     <form action="" target="_self" method="POST" name="mainForm">
+        <input type="text" value="main" name="formType" hidden>
         <input type="text" value="false" name="game1" hidden>
         <input type="text" value="false" name="game2" hidden>
         <input type="text" value="false" name="game3" hidden>
