--- a/pit.html
+++ b/pit.html
@@ -12,6 +12,7 @@
     <div class="cont-flex">
         <div class="cont-flex-item">
             <form action="" target="_self" method="POST">
+                <input type="text" value="pit" name="formType" hidden>
                 <!--overrides-->
                 <input type="text" value="false" name="game2" hidden>
                 <input type="text" value="false" name="game3" hidden>
