--- a/pit.html
+++ b/pit.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css" type="text/css">
+    <link rel="stylesheet" href="src/2023.css" type="text/css">
     <title>Pit Scouting</title>
 </head>
 
 <body>
     <div class="cont-flex">
         <div class="cont-flex-item">
-            <form action="" target="_self" method="POST">
+            <form action="/submit" target="_self" method="POST">
                 <input type="text" value="pit" name="formType" hidden>
                 <!--overrides-->
                 <input type="text" value="false" name="game2" hidden>
@@ -174,12 +174,10 @@
 
                 <p style="text-align:center">
                     <input type="submit" value="Submit Form" style="color: white; background-color: #515151; border-radius: 1rem; border-style: solid; border-color: #515151; border-width: 1rem;"><br><br>
-                    <input type="reset" value="Reset Form" style="color: white; background-color: #E90202; border-radius: 1rem; border-style: solid; border-color: #E90202; border-width: 1rem;"><br><br>
                     <a href="index.html" style="color: white; background-color: #E90202; border-radius: 1rem; border-style: solid; border-color: #E90202; border-width: 1rem;">Back</a><br><br>
                 </p>
             </form>
             <br><br>
-            <script src="form.js"></script>
         </div>
     </div>
 </body>
