add a "float" style

--- a/main.html
+++ b/main.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/2023.css" type="text/css">
+    <link rel="stylesheet" href="src/2023_float.css" type="text/css">
     <title>Match Scouting</title>
 </head>
 
 <body>
     <form action="/submit" target="_self" method="POST" name="mainForm">
         <input type="text" value="main" name="formType" hidden>
-        <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">Charged Up</span></h1><br>
+        <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1><br>
         <h2 class="gameflair1">Pre-Match</h2>
         <fieldset>
             <label>Event Code</label><br>
